// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date Time Input (unit tests) when has a label should match the snapshot 1`] = `
<kv-date-time-input label="Date Time Label" placeholder="" value="">
  <div class="date-time-input-container">
    <kv-form-label label="Date Time Label"></kv-form-label>
    <div class="input-container input-container--size-large">
      <input placeholder="" type="text" value="">
    </div>
  </div>
</kv-date-time-input>
`;

exports[`Date Time Input (unit tests) when uses default props should match the snapshot 1`] = `
<kv-date-time-input placeholder="" value="">
  <div class="date-time-input-container">
    <kv-form-label></kv-form-label>
    <div class="input-container input-container--size-large">
      <input placeholder="" type="text" value="">
    </div>
  </div>
</kv-date-time-input>
`;
